# concerto

./: index.html
.github/workflows/: deploy.yaml  gh-pages-build
assets/: index-B9HNCX9T.js  index-BopPNy_n.js
backend/: Cargo.toml
backend/src/: main.rs
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.tsx  canvas.tsx  client.ts  distance.ts  location.tsx  physics.ts  piano.css  piano.tsx  player.ts  sync.ts  v1.tsx  visualizer-controller.tsx  visualizer.tsx
