[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
futures-util = "0.3.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["macros", "rt", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.23.1", features = ["rustls-tls-native-roots"] }
